--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="https://djru5284loilogclat9kc8bidj681kv31lj4b76kdkh8bmennma0.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
+    <a href="https://djru5284loilogclat9kc8bidj681kv31lj4b76kdkh8bmennma0.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a><br>
+    <video><source src="resources\videos\excursion.mp4" type="video/mp4"></video>
+      <h1>Your personal travel guide</h1>
+      <h2>Excursion remembers places you like, and recommends new points of interest around you.</h2>
+      <img src="resources\images\camp.jpg">
+      <p><img src="resources\images\phone.png"></p>
+      <h1>Coming Soon for iPhone and Android</h1>
+      <a href="https://djru5284loilogclat9kc8bidj681kv31lj4b76kdkh8bmennma0.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a>
   </body>
 </html>
